# nixos

./: .editorconfig  .envrc  .gitignore  .gitmodules  README.md  README.org  configuration.nix  flake.nix  pyproject.toml  raspi-setup.md  requirements.txt  setup-shell.nix  shell.nix  username.nix
common/: cli-packages.nix  common.nix  desktop.nix  docker.nix  home-manager.nix
custom/: default.nix
hardware/: blueooth.nix  bluetooth.nix  default.nix
home/: common.nix  personal-desktop.nix  ubuntu.nix  work-wsl.nix
home-manager/: common.nix  desktop.nix  headless.nix  management.nix  obsidian.nix  plex.nix  ubuntu.nix  work-desktop.nix  work-wsl.nix
lib/: mk_computer.nix  mk_raspi.nix
modules/: cli-packages.nix  common.nix  default.nix  desktop.nix  docker.nix  home-manager.nix
pkgs/: default.nix  mediaPaths.nix  pkgs.org
scripts/: add-home-manager-channels.sh  add-home-manager.-channel.sh  build-all-machines  build-raspi-image.sh  build-servers.sh  container-updates  container-updates.sh  create-uefi.sh  dry-build-all  fingerprint-fix.py  format-disk.py  format-disk.sh  format-sdcard.py  install-home-manager.sh  install-to-mnt.sh  install.sh  install_new_system.sh  install_new_vm.sh  install_new_vm.xsh  install_vm.sh  link-asus.sh  link-precision.sh  link-precision5530.sh  link-vm.sh  link-xps5530.sh  mount-btrfs-partitions.sh  reboot-all-machines  remote_switch.sh  remote_switch.xsh  rename-partitions.py  rename-partitions.sh  run-command  secret_permissions.sh  secret_permissions.xsh  setup_vm_home.sh  test-build  test_build.sh  test_sd_card.sh  (+7 more)
(+810 files in other folders)
