[project]
requires-python = ">=3.12"

[tool.isort]
force_single_line = true

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
  "scripts/*.sh",
  "scripts/test-build",
]
include = [
  "scripts/*",
]
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
select = [ "ALL" ]
ignore = [
"COM812", # Black is responsilble for formatting
"INP001", # The scripts in this project rarely belong to a namespace.
"S603", # I mostly don't have any input for the scripts in this project.
"S607", # We get the paths from the environment
"T201", # Print is easy to use and for fine for CLI scripts
]

[tool.ruff.lint.isort]
force-single-line = true